create start screen and player count selector

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanks A Million!</title>
+    <title>Tanks fer Nuthin'!</title>
   </head>
   <body>
     <div id="root"></div>
